# ts-bench

./: README.md  pyproject.toml  run.py  summarize.py
experiments/: ablation-normal-vs-main.json  ablation-vs-main.json  branch-vs-main.json  just-two-vs-assertion-last.json  just-two-vs-normal.json  normal-vs-main.json  trivial-check.json  type-only-vs-normal.json
results/: ablation-normal-vs-main-2024-02-25T175828.json  ablation-vs-main-2024-02-25T154646.json  branch-vs-main-2024-02-25T145737.json  branch-vs-main-2024-02-25T150558.json  branch-vs-main-2024-02-25T152313.json  branch-vs-main-2024-02-25T153253.json  just-two-vs-assertion-last-2024-02-25T183312.json  just-two-vs-assertion-last-2024-02-25T184300.json  just-two-vs-normal-2024-02-25T181750.json  normal-vs-main-2024-02-25T173706.json  normal-vs-main-2024-02-25T174715.json  trivial-check-2024-02-25T162352.json  type-only-vs-normal-2024-02-25T172307.json
