[tool.poetry]
name = "ts-bench"
version = "0.1.0"
description = ""
authors = ["Dan Vanderkam <danvdk@gmail.com>"]
readme = "README.md"
packages = [{include = "ts_bench"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
